--- a/style2.css
+++ b/style2.css
@@ -180,15 +180,13 @@ p {
 /* HERO HEADER ============================================================== */
 
 .hero-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 1.5rem;
   border-radius: 1rem;
   border: 2px solid var(--indigo-10);
-  background-image: radial-gradient(
-    circle at top left,
-    var(--indigo-05),
-    80%,
-    var(--indigo-20)
-  );
+  background-image: radial-gradient(circle at top left, var(--indigo-05), 80%, var(--indigo-20));
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -197,20 +195,13 @@ p {
 .main-texts h1 {
   margin-bottom: 0;
 }
-.buttons-group {
-  width: 100%;
+.hero-section button {
+  width: 180px;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.buttons-group ul {
-  padding-left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-}
-.main-texts h1,
+.main-texts h1, 
 .main-texts p {
   text-align: center;
 }
@@ -219,11 +210,13 @@ p {
 }
 .main-texts {
   padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .image-right {
   width: 100%;
 }
-
 /* FEATURES SECTION ============================================================= */
 
 /* Features Section */
